[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "cosim_toolbox"
dynamic = ["version"]
authors = [{name = "Trevor Hardy", email = "trevor.hardy@pnnl.gov"}]
maintainers = [
    {name = "Mitch Pelton", email = "mitch.pelton@pnnl.gov"},
    {name = "Fred Rutz", email = "fredrick.rutz@pnnl.gov"},
    {name = "Nathan Gray", email = "nathan.gray@pnnl.gov"},
    {name = "Trevor Hardy", email = "trevor.hardy@pnnl.gov"}
]
description = "Python support for the CoSimulation Toolbox"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["power system", "transactive", "energy"]
requires-python = ">=3.10"
dependencies = [
    "importlib-resources~=6.4.5",
    "h5py~=3.14.0",
    "helics~=3.6.1",
    "pandas~=2.2.3",
    "numpy~=1.26.4",
    "scipy~=1.16.1",
    "matplotlib~=3.10.3",
    "networkx~=3.5",
    "PYPOWER==5.1.16",
    "pyutilib==6.0.0",
    "psycopg2-binary~=2.9.10",
    "pymongo~=4.13.2",
    "Pyomo==6.5.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://devops.pnnl.gov/e-comp/thrust-3/copper"
Documentation = "https://cosim_toolbox.readthedocs.io"
Repository = "https://devops.pnnl.gov/e-comp/thrust-3/copper"

[tool.setuptools.packages.find]
where = [".","cosim_toolbox"]

[tool.setuptools.package-data]
api = ["*"]
#"api.datafiles" = ["*.json", "*.db"]

[project.scripts]
#tesp_components = "cosim_toolbox.api.data:tesp_component"
